// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a coverage report is running at 10% progress 1`] = `
<div
  style={
    Object {
      "height": "35px",
    }
  }
>
  <div
    className="progress"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow={0.1}
      className="progress-bar progress-bar-optimization"
      role="progressbar"
      style={
        Object {
          "lineHeight": "34px",
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`When the user does not have a coverage report 1`] = `
<div
  style={
    Object {
      "height": "35px",
    }
  }
>
  <button
    className="btn btn-block btn-primary"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-bolt"
    />
     
    Run
  </button>
</div>
`;

exports[`When the user has a coverage report 1`] = `
<div
  style={
    Object {
      "height": "35px",
    }
  }
>
  <button
    className="btn btn-block modify-coverage-button"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-bolt"
    />
     
    Modify coverage
  </button>
</div>
`;
